feat(output.css)

--- a/src/header.html
+++ b/src/header.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="output.css">
 </head>
 <body class="font-isw">
-    
+   <header class="bg-white container column-3 spacing-3">
+        <nav class="mx-auto flex items-center justify-between">
+            <a href="#"><img class="w-16 h-12"  src="./assets/img/logo.svg"/></a>
+        </nav>
+   </header>     
 </body>
 </html>
