--- a/src/header.html
+++ b/src/header.html
@@ -7,10 +7,31 @@
     <link rel="stylesheet" href="output.css">
 </head>
 <body class="font-isw">
-   <header class="bg-white container column-3 spacing-3">
-        <nav class="mx-auto flex items-center justify-between">
-            <a href="#"><img class="w-16 h-12"  src="./assets/img/logo.svg"/></a>
+   <header class="md:container md:mx-auto bg-white w-2/3 grid grid-cols-8 gap-4">
+        <a href="#" class="col-start-1 col-end-2"><img class=""  src="./assets/img/logo.svg"/></a>
+        <nav class="mx-auto flex items-center justify-between col-start-3 col-end-8 flex gap-3">
+          <a href="#"><i class="icon icon-home3 color-gray-4"></i></a>
+          <a href="#">جستجوی تور <i class="icon icon-chevron-down text-red-1"></i></a>
+          <a href="#">خدمات گردشگری <i class="icon icon-chevron-down text-red-1"></i></a>
+          <a href="#">وبلاگ</a>
+          <a href="#">تماس با ما</a>
+          <a href="#">درباره ما</a>
+          <a href="#">استرداد بلیط</a>
         </nav>
+        <ul class="mx-auto flex items-center justify-between col-start-9 col-end-12">
+            <li>
+                <a href="#"><i class="icon icon-phone-call"></i> 02147626262 </a>
+            </li>
+            <li>
+                <a href="#">درخواست تور <i class="icon icon-edit2"></i></a>
+            </li>
+            <li>
+                <a href="#"> <span>ورود</span> <span>عضویت</span> <i class="icon icon-icons8-user-64"></i> </a>
+            </li>
+            <li>
+                <a href="#"><span>IRR</span> <i class="flag Iran_flag"></i></a>
+            </li>
+        </ul>
    </header>     
 </body>
 </html>
